<resources>
    <string name="app_name">B&amp;G</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1_3"><font color="#970C10">1</font>/3</string>
    <string name="_2_3"><font color="#970C10">2</font>/3</string>
    <string name="_3_3">3/3</string>
    <string name="choose_product">Choose Product</string>
    <string name="onb1_text">A product is the item offered for sale.\n A product can be a service or an item. It can be Physical or in virtual or cyber form.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="make_payment">Make Payment</string>
    <string name="onb2_text">Payment is the transfer of money services in exchange product or Payments typically made terms agreed</string>
    <string name="get_your_order">Get Your Order</string>
    <string name="onb3_text">Business or commerce an order is a stated intention either spoken to engage in a commercial transaction specific products</string>
    <string name="get_started">Get Started</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email_address">Email</string>
    <string name="sign_up_question">Don\'t have an account? <font color="#970C10"> Sign Up</font></string>
    <string name="repeat_password">Repeat Password</string>
    <string name="terms" translatable="false">I accept all the</string>
    <string name="conditions" translatable="false"><font color="#970C10"> Terms &amp; Conditions</font></string>
    <string name="enter_an_email">Enter an email address:</string>
    <string name="password_recovery">Password recovery</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="personal_information">Personal Information</string>
    <string name="name">Name</string>
    <string name="name2">Name:</string>
    <string name="email2">Email:</string>
    <string name="location">Location:</string>
    <string name="number">Number</string>
    <string name="progress_orders">Progress orders</string>
    <string name="_10">10+</string>
    <string name="change_password">Change password</string>
    <string name="change">Change</string>
    <string name="settings">Settings</string>
    <string name="email_support">Email support</string>
    <string name="faq">FAQ</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="languages">Languages</string>
    <string name="all_products">All Products</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="register_success">\"You have registered successfully! \"</string>
    <string name="mail_error">This mail is already used!</string>
    <string name="pass_not_match">Passwords do not match!</string>
    <string name="login_error">Email or password is not correct!</string>
    <string name="empty_fields_error">Please fill in all the fields!</string>
    <string name="invalid_email_error">Please enter the valid email!</string>
    <string name="logged_success">You have logged in successfully!</string>
    <string name="email_password_incorrect">Email or password is not correct!</string>
    <string name="password_length_limit">Password must contain at least 8 characters!</string>
    <string name="already_registered">This email is already used. Please use another email!</string>
    <string name="send">Send</string>
    <string name="recovery_success">A recovery message has been sent to your email, please check it</string>
    <string name="recovery_error">Failed to send recovery message, please enter a valid email</string>
    <string name="login_success">You have log in successfully!</string>
    <string name="wallet">Wallet</string>
    <string name="my_cart">My cart</string>
    <string name="already_have_an_account">Already have an account? <font color="#970C10"> Log in</font></string>
    <string name="first_char_number_error">Username\'s first character cannot be a number</string>
    <string name="check_box">Please, check the box</string>
    <string name="b_g"><![CDATA[B&G]]></string>
    <string name="firstname">Firstname:</string>
    <string name="lastname">lastname:</string>
    <string name="phone_number">phone number:</string>
    <string name="subtotal">Subtotal :</string>
    <string name="dollar">$</string>
    <string name="checkout">Checkout</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New Password</string>
    <string name="billing_information">Billing information</string>
    <string name="delivery_fee">Delivery Fee :</string>
    <string name="subtotal_for_checkout">Subtotal :</string>
    <string name="total">Total :</string>
    <string name="payment_method">Payment method</string>
    <string name="shopping_card">Shopping-card</string>
    <string name="payment">Payment</string>
    <string name="title">Title</string>
    <string name="price">price</string>
    <string name="description">description</string>
    <string name="brand">Brand:</string>
    <string name="rating">Rating:</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="what_is_b_amp_g"><![CDATA[What is B&G?]]></string>
    <string name="support_answer"><![CDATA[B&G is a shopping app where you can buy different types of products.]]></string>
    <string name="support_answer2">The application was created by Baia Asanidze and Gaga Lomidze in 2022 especially for TBC Bootcamp.</string>
    <string name="who_created_b_amp_g"><![CDATA[Who created B&G]]></string>
    <string name="explore">Explore</string>
    <string name="new_arrival">New Arrival</string>
    <string name="best_outfits_for_you">Best Outfits for you</string>
    <string name="see_all">See All</string>
    <string name="my_orders">My Orders</string>
    <string name="congratulation">Congratulation!!!</string>
    <string name="payment_success">Payment is the transfer of money \n services in exchange product or Payments</string>
    <string name="back_to_home">Back to Home</string>
    <string name="email_support_text">In case of additional questions, do not contact us at the email address supportBG@gmail.com</string>
    <string name="my_wallet">My Wallet</string>
    <string name="recent_transactions">Recent transactions</string>
    <string name="clear">Clear</string>
    <string name="Terms_and_conditions">https://www.termsfeed.com/public/uploads/2021/12/sample-terms-conditions-agreement.pdf</string>
    <string name="add_success">Product added successfully!</string>
    <string name="already_added">Product is already added!</string>
    <string name="check_method">Please check payment method!</string>
    <string name="database_path">userInfo</string>
    <string name="cards">cards</string>
    <string name="balance">balance</string>
    <string name="fill_balance">Please fill the balance!</string>
</resources>